# mlx-serve

./: README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
docs/: medium-post-draft.md
docs/superpowers/plans/: 2026-04-12-mlx-serve.md
docs/superpowers/specs/: 2026-04-12-mlx-serve-design.md
src/mlx_serve/: __init__.py  engine.py  main.py
src/mlx_serve/api/: models.py  router.py
tests/: test_engine.py  test_models.py  test_router.py
