[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-serve"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm",
    "fastapi>=0.111",
    "uvicorn[standard]",
]

[project.scripts]
mlx-serve = "mlx_serve.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_serve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.21", "httpx>=0.27"]
